# distributed_prompt

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: style.yml  test.yml
distributed_prompt/: __init__.py  __main__.py  cli.py  core.py  ingest.py  shard.py
distributed_prompt/backends/: __init__.py  base.py  file_backend.py  s3_backend.py
tests/: test_core.py  test_file_backend.py  test_ingest.py
