[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-prompt"
version = "0.2.0"
description = "Horizontally scalable prompts for Recursive Language Models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["tiktoken"]
license = "MIT"
authors = [{ name = "Tobi Lehman" }]

[project.optional-dependencies]
s3 = ["boto3"]

[dependency-groups]
dev = ["ruff", "pytest", "pytest-cov"]

[project.scripts]
distributed_prompt = "distributed_prompt.cli:main"
dprompt = "distributed_prompt.cli:main"

[tool.setuptools.packages.find]
include = ["distributed_prompt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
link-mode = "copy"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
